# talks

./: .gitignore  .gitmodules  Cargo.toml  README.md  clone-me.sh
polars-demo/: README.md  presentation.md
polars-demo/examples/: basic_lazy.rs  complex.rs
polars-demo/src/: lib.rs
python/: README.md  pyproject.toml
python/narwhals-demo/: aggregations.py  demo.py  employees.csv  main.py  presentation.md  pyproject.toml
rust/polars-demo/: Cargo.toml  present.sh  presentation.md
rust/polars-demo/benches/: eager_v_lazy.rs
rust/polars-demo/examples/: complex.rs  eager.rs  report.rs
