[project]
name = "narwhals-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "narwhals>=2.1.1",
    "pandas>=2.3.1",
    "polars>=1.32.2",
    "duckdb>=1.3.2",
    "ipykernel>=6.30.1",
    "pyarrow>=21.0.0",
]

[[tool.uv.index]]
url = "https://wingx-018953446474.d.codeartifact.eu-central-1.amazonaws.com/pypi/internal-tools/simple/"
