[package]
name = "polars-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.9.0"
geo = "0.29.3"
polars = { version = "0.45.1", features = [
    "dtype-date",
    "lazy",
    "strings",
    "json",
    "parquet",
    "round_series",
] }
reqwest = { version = "0.12.12", features = ["blocking"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "eager_v_lazy"
harness = false
